components/css/main.css
/* ... */
.easy-hr-intro__left strong {
	font-weight: bold;
}

.easy-hr-offers {
	padding-bottom: 60px;
	color: #000;
}

.easy-hr-offers__img {
	position: relative;
	z-index: 10;
}

.easy-hr-offers__img img {
	position: absolute;
	top: 0;
	left: 0;
	width: 550px;
	height: 570px;
}

.easy-hr-offers h2 {
	margin-bottom: 30px;
	font-family: 'Graphik', sans-serif;
	font-size: 30px;
}

.easy-hr-offers__list {
	padding-left: 60px;
}

.easy-hr-offers ul {
	margin: 0;
	padding: 0;
}

.easy-hr-offers li {
	margin-bottom: 16px;
	font-family: 'Graphik', sans-serif;
}

.easy-hr-advantages__wrap {
	position: relative;
	padding: 90px 0 75px;
	background: #f5f5f5;
	z-index: 9;
}

.easy-hr-advantages__left {
	padding-right: 30px;
	font-family: 'Graphik', sans-serif;
	color: #0779A3;
}

.easy-hr-advantages__left h3 {
	font-family: 'Graphik', sans-serif;
	font-size: 30px;
}

.easy-hr-advantages__left h4 {
	font-family: 'Graphik', sans-serif;
	font-size: 24px;
}

.easy-hr-advantages__left p {
	font-family: 'Graphik', sans-serif !important;
	color: #0779A3;
}

.easy-hr-advantages__block {
	margin-bottom: 25px;
	padding: 33px;
	background: #fff;
}

.easy-hr-advantages__right {
	padding: 80px 50px;
	background: #fff;
}

.easy-hr-advantages__right h3 {
	font-family: 'Graphik', sans-serif !important;
	font-size: 24px;
	font-weight: bold;
	text-align: center;
	color: #0779A3;
}

.easy-hr-advantages__right p {
	font-family: 'Graphik', sans-serif !important;
	font-size: 16px;
	text-align: center;
	color: #0779A3;
}

.easy-hr-advantages__right .your-text,
.easy-hr-advantages__right .your-phone {
	display: block;
	margin-bottom: 20px;
	height: 50px;
}

.easy-hr-advantages__right .your-text input,
.easy-hr-advantages__right .your-phone input {
	margin: 0;
	padding: 0;
	width: 100%;
	height: 50px;
	line-height: 50px;
	text-indent: 15px;
	color: rgba(0, 0, 0, 0.5);
	background: #f5f5f5;
}

.easy-hr-advantages__right .wpcf7-submit {
	margin-top: 30px;
	color: #0779A3;
	background: transparent;
	border: 1px solid #0779A3;
}

.easy-hr-advantages__right .wpcf7-submit:hover {
	color: white;
	background: #0779A3;
}

input[placeholder] {
	text-align: center;
}

input::-moz-placeholder {
	text-align: center;
}

input:-moz-placeholder {
	text-align: center;
}

input:-ms-input-placeholder {
	text-align: center;
}

.easy-hr-advantages .privacy {
	margin-top: 30px;
}

.easy-hr-advantages .wpcf7-form .wpcf7-list-item input[type=checkbox] + span:before {
	top: 5px;
	border: 1px solid #0779A3;
}

.easy-hr-advantages .wpcf7-form .wpcf7-list-item input[type=checkbox] + span:after {
	top: 7px;
}

@media screen and (max-width: 768px) {
	.easy-hr-intro {
		margin-bottom: 0;
		padding-top: 60px;
	}

	.soluzioni-template-single-easy-hr .head_soluzione h1 {
		width: 100%;
		font-size: 24px;
	}

	.easy-hr-advantages__right {
		padding: 30px;
	}

	.easy-hr-intro__right img {
		position: static;
		display: block;
		margin-top: 30px;
		width: auto;
	}

	.easy-hr-offers__img {
		display: none;
	}

	.easy-hr-advantages__left {
		padding: 0 15px;
	}

	.easy-hr-advantages__left h3,
	.easy-hr-advantages__left h4,
	.easy-hr-advantages__left p {
		text-align: center;
	}

	.easy-hr-advantages__wrap {
		padding: 30px 0;
	}
}

.landing_page_container .contattaci_form {
	border: 1px solid #0779A3;
}

.container-small {
	margin: 0 auto;
	max-width: 1100px;
}

.easy-perizie-intro {
	margin-bottom: 115px;
	padding-top: 90px;
}

.easy-perizie-intro__img {
	position: relative;
}

.easy-perizie-intro__img .wpb_single_image {
	width: 100%;
	height: 100%;
}

.easy-perizie-intro__img figure {
	position: absolute;
	top: -340px;
	right: 0;
	width: 790px;
	height: 700px;
	z-index: -1;
}

.easy-perizie-intro__img img {
	max-width: initial;
	width: 100%;
}
.easy-perizie-list {
	margin-bottom: 100px;
}
.easy-perizie-semplice h3,
.easy-perizie-list h3 {
	margin-bottom: 30px;
	font-family: Graphik;
	font-style: normal;
	font-weight: 300;
	font-size: 56px;
	line-height: 125%;
	letter-spacing: -2px;
	color: #0779A3;
}

.easy-perizie-list ol {
	column-count: 2;
	column-gap: 68px;
}
.easy-perizie-list li {
	margin-bottom: 10px;
}
.easy-perizie-list strong {
	color: #0779A3;
}

.easy-perizie-semplice {
	padding-bottom: 120px;
}
.easy-perizie-semplice h3 {
	text-align: center;
}
.easy-perizie-semplice p {
	text-align: center;
}
.easy-perizie-semplice img {
	width: 770px;
}
.easy-hr-advantages {
	background: #f5f5f5;
}
@media screen and (max-width: 1300px) {
	.easy-perizie-intro__img figure {
		top: -234px;
	}
	.easy-perizie-intro__img img {
		max-width: 100%;
		width: 100%;
	}
}

@media screen and (max-width: 992px) {
	.easy-perizie-intro {
		padding-top: 60px;
		margin-bottom: 0;
		padding-bottom: 0;
	}
	.easy-perizie-intro__img figure {
		position: relative;
		top: 0;
		left: 0;
		width: auto;
		height: auto;
	}
}
@media screen and (max-width: 768px) {
	.easy-perizie-intro {
		padding: 30px 15px 0;
	}

	.easy-perizie-intro__img img {
		display: block;
		max-width: 400px;
	}

	.easy-perizie-list ol {
		column-count: initial;
	}
	.easy-perizie-semplice h3, .easy-perizie-list h3 {
		font-size: 32px;
	}
	.easy-perizie-intro__img .wpb_single_image {
		text-align: right;
	}
}

